fix flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,7 @@
 html {
   overflow-x: hidden;
   scroll-behavior: auto !important;
+  background-color: var(--background);
 }
 
 html.lenis, html.lenis body {
